--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,6 +22,21 @@ application = {
       parallelism = "100"
     }
   }
+  postgres = {
+    address = "10.1.2.98"
+    port = "5432"
+    database = "cnap"
+    username = "postgres"
+    pwd: "Welcome1"
+    url = {
+      table = "policy"
+      parallelism = "30"
+    }
+    answer = {
+      table = "answer"
+      parallelism = "100"
+    }
+  }
   solr = {
     collection = "cnap"
     address = "10.1.2.98"
